[gd_scene load_steps=11 format=3 uid="uid://6rp3wgax4i51"]

[ext_resource type="Script" uid="uid://brl0yede1msau" path="res://Scripts/Classes/Entities/Objects/RopeElevatorPlatform.gd" id="1_h7s5k"]
[ext_resource type="Texture2D" uid="uid://bk0p52ttwojml" path="res://Assets/Sprites/Tilesets/Platform.png" id="2_j5n7v"]
[ext_resource type="Script" uid="uid://cbal8ms2oe1ik" path="res://Scripts/Classes/Components/ResourceSetterNew.gd" id="3_rve1b"]
[ext_resource type="JSON" path="res://Assets/Sprites/Tilesets/Platform.json" id="4_o0yqe"]
[ext_resource type="Texture2D" uid="uid://dt0qtxu2l646n" path="res://Assets/Sprites/Tilesets/Terrain/Overworld.png" id="5_ufhfv"]
[ext_resource type="JSON" path="res://Assets/Sprites/Tilesets/Terrain/TerrainTiles.json" id="5_v7k46"]
[ext_resource type="Script" uid="uid://d0mqkvopasu8k" path="res://Scripts/Classes/Components/SecondQuestReplaceComponent.gd" id="7_4sogk"]
[ext_resource type="Script" uid="uid://5octqlf4ohel" path="res://Scripts/Classes/Components/ScoreNoteSpawner.gd" id="8_bsily"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wf1r1"]
size = Vector2(48, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v7k46"]
size = Vector2(48, 5)

[node name="RopeElevatorPlatform" type="Node2D"]
script = ExtResource("1_h7s5k")

[node name="Platform" type="AnimatableBody2D" parent="."]
sync_to_physics = false

[node name="Sprite" type="NinePatchRect" parent="Platform"]
offset_left = -24.0
offset_right = 24.0
offset_bottom = 8.0
texture = ExtResource("2_j5n7v")
patch_margin_left = 8
patch_margin_right = 8
axis_stretch_horizontal = 1

[node name="ResourceSetter" type="Node" parent="Platform/Sprite" node_paths=PackedStringArray("node_to_affect")]
script = ExtResource("3_rve1b")
node_to_affect = NodePath("..")
property_name = "texture"
mode = 1
resource_json = ExtResource("4_o0yqe")
metadata/_custom_type_script = "uid://cbal8ms2oe1ik"

[node name="Shape" type="CollisionShape2D" parent="Platform"]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_wf1r1")

[node name="PlayerDetection" type="Area2D" parent="Platform"]

[node name="Shape" type="CollisionShape2D" parent="Platform/PlayerDetection"]
position = Vector2(0, -2.5)
shape = SubResource("RectangleShape2D_v7k46")

[node name="ScoreNoteSpawner" type="Node" parent="Platform"]
script = ExtResource("8_bsily")
add_score = true
metadata/_custom_type_script = "uid://5octqlf4ohel"

[node name="Rope" type="NinePatchRect" parent="."]
z_index = -1
offset_left = -8.0
offset_top = -56.0
offset_right = 8.0
texture = ExtResource("5_ufhfv")
region_rect = Rect2(160, 144, 16, 16)

[node name="ResourceSetterNew" type="Node" parent="Rope" node_paths=PackedStringArray("node_to_affect")]
script = ExtResource("3_rve1b")
node_to_affect = NodePath("..")
property_name = "texture"
mode = 1
resource_json = ExtResource("5_v7k46")
metadata/_custom_type_script = "uid://cbal8ms2oe1ik"

[node name="SecondQuestReplacer" type="Node" parent="."]
script = ExtResource("7_4sogk")
new_scene = "uid://c6ym8t537v4ac"
properties = Array[String](["linked_platform", "rope_top"])
metadata/_custom_type_script = "uid://d0mqkvopasu8k"
